Added footer to html

--- a/index.html
+++ b/index.html
@@ -46,5 +46,6 @@
                     <div class="subtext">Sign up for our product by clicking that button right over there!</div>
                 <button class="signup2">Sign up</button>
             </div>
+        <div class="footer">Copyright<span> &copy; </span>The Odin Project 2021</div>
     </body>
 </html>
