--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="styles.css" rel="stylesheet">
     <title>Landing Page Odin</title>
 </head>
     <body class="body">
@@ -11,16 +12,18 @@
             <div class="header">
                 <div id="headerlogo">Header Logo</div>
                 <ul>
-                    <li>header link one</li>
-                    <li>header link one</li>    
-                    <li>header link one</li>    
+                    <li><a href="#">header link one</a></li>
+                    <li><a href="#">header link two</a></li>
+                    <li><a href="#">header link three</a></li>
                 </ul>
             </div>
-                <div class="box1">
-                    <div class="header1">This website is awesome</div>
-                    <div>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
-                    <button>Sign up</button>
-                    <img class="image1">
+                <div class="box">
+                    <div class="box1">
+                        <div class="header1">This website is awesome</div>
+                        <div class="subtext">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
+                        <button>Sign up</button>
+                    </div>
+                        <div class="image1">this is a place colder for an image</div>
                 </div>
         </div>
         <div class="container2">
@@ -43,7 +46,7 @@
         <div class="container4">
             <div class="box3">
                 <div class="title">Call to action! It's time!</div>
-                    <div class="subtext">Sign up for our product by clicking that button right over there!</div>
+                    <div class="subtext1">Sign up for our product by clicking that button right over there!</div>
                 <button class="signup2">Sign up</button>
             </div>
         <div class="footer">Copyright<span> &copy; </span>The Odin Project 2021</div>
