--- a/index.html
+++ b/index.html
@@ -29,24 +29,36 @@
         <div class="container2">
             <div class="header2">Some random information</div>
                 <div class="box2">
-                    <div class="image2"></div>
-                        <div class="text">this is some subtext under an illustration or image</div>
-                    <div class="image2"></div>
-                        <div class="text">this is some subtext under an illustration or image</div>
-                    <div class="image2"></div>
-                        <div class="text">this is some subtext under an illustration or image</div>
-                    <div class="image2"></div>
-                        <div class="text">this is some subtext under an illustration or image</div>
+                        <div class="infobox">
+                            <div class="image2"></div>
+                            <div class="text">this is some subtext under an illustration or image</div>
+                        </div>
+                        <div class="infobox">
+                            <div class="image2"></div>
+                            <div class="text">this is some subtext under an illustration or image</div>
+                        </div>
+                        <div class="infobox">
+                            <div class="image2"></div>
+                            <div class="text">this is some subtext under an illustration or image</div>
+                        </div>
+                        <div class="infobox">
+                            <div class="image2"></div>
+                            <div class="text">this is some subtext under an illustration or image</div>
+                        </div>
                 </div>
         </div>
         <div class="container3">
-            <div class="quote">This is an inspiring quote, or testimonial from customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
-            <div class="thorsquote">-Thor, God of Thunder</div>
+            <div class="box3">
+                <div class="quote">This is an inspiring quote, or testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
+                <div class="thorsquote">-Thor, God of Thunder</div>
+            </div>
         </div>
         <div class="container4">
-            <div class="box3">
-                <div class="title">Call to action! It's time!</div>
+            <div class="box4">
+                <div class="textbox">
+                    <div class="title">Call to action! It's time!</div>
                     <div class="subtext1">Sign up for our product by clicking that button right over there!</div>
+                </div>
                 <button class="signup2">Sign up</button>
             </div>
         <div class="footer">Copyright<span> &copy; </span>The Odin Project 2021</div>
